--- a/github/workflows/gotoprod1.yml
+++ b/github/workflows/gotoprod1.yml
@@ -34,5 +34,9 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-          wc -l ./*
+          wc -l ./index.html
+          wc -l ./contact.html
+          wc -l ./home.html
+          wc -l ./home.css
+          wc -l ./style.css
 
