--- a/.github/workflows/gotoprod1.yml
+++ b/.github/workflows/gotoprod1.yml
@@ -34,6 +34,6 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-          wc -l ./index.html
+          wc -l ./*.html
           wc -l ./style.css
 
